[package]
name = "samson"
version = "0.1.0"
authors = ["Lakin Wecker <lakin@wecker.ca>"]

[dependencies]
lazy_static = "*"
num = "*"
regex = "^0.2"
encoding = "0.2.33"
shakmaty = { git = "https://github.com/lakinwecker/shakmaty.git" }

[dependencies.nom]
version = "^3.1"
features = ["regexp", "regexp_macros"]

[profile.dev]
debug = true
